--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -71,9 +71,9 @@
   </mat-table>
 
   <div *ngIf="isLoading"
-   style="display: flex; justify-content: center; align-items: center; background: white;">
+   style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
   <mat-progress-spinner
-    color="primary"
+  class="mat-spinner-color"
     mode="indeterminate">
   </mat-progress-spinner>
 </div>
