--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -56,7 +56,7 @@
   <div *ngIf="isLoading"
   style="display: flex; justify-content: center; align-items: center; background: white;">
  <mat-progress-spinner
-   color="primary"
+ class="mat-spinner-color"
    mode="indeterminate">
  </mat-progress-spinner>
 </div>
