--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -16,7 +16,7 @@ h1{
   font-family: sans-serif;
 }
 .button {
-   
+
     color: white;
     background-color: blue;
     padding: 4px;
@@ -33,8 +33,8 @@ h1{
   .header{
     margin-top: -5%;
   }
-  
-  
+
+
 .item2{
   background-color: white;
   color: #39ace7;
@@ -208,3 +208,7 @@ mat-header-cell:nth-child(5) {
     margin-left: 90%;
   }
 }
+
+.mat-spinner-color::ng-deep circle{
+  stroke: #56baed !important;
+  }
