--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -51,7 +51,7 @@
   <div *ngIf="isLoading"
   style="display: flex; justify-content: center; align-items: center; background: white;">
  <mat-progress-spinner
-   color="primary"
+ class="mat-spinner-color"
    mode="indeterminate">
  </mat-progress-spinner>
 </div>
