--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
@@ -78,20 +78,12 @@ button[disabled]:hover {
 
 .browseFile{
   color: white;
-  width: 100px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 21.5px;
-  background-color: #56baed;
+  background-color: white;
   padding: 8px 16px;
   margin:40%;
 }
 
-.browseFile:hover{
-  color: white;
-  width: 100px;
-  height: 20px;
-  border-radius: 21.5px;
-  padding: 8px 16px;
-  background-color:gray;
-}
 
