--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -22,8 +22,12 @@
 
         <form [formGroup]="form" (ngSubmit)="submitForm()">
             <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file" required hidden>
-            <label for="inputFile" class="browseFile"> Photo</label>
+            <label>Take photo:</label>
+            <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%"/></label>
         </form>
+        <div *ngIf="imageUploaded">
+          <p>Image is uploaded</p>
+        </div>
         <div mat-dialog-actions class="wrap">
             <button mat-button class="test" type="submit" [mat-dialog-close]="1" (click)="submitForm()" [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Add</a></span></button>
 
