brisanje object store checka

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -27,7 +27,7 @@
 
 
         <div class="fadeIn third">
-            <a [routerLink]="['/storeCheck']">
+            <a (click)="exit()">
                 <div class="item2">
                     Exit
                 </div>
