--- a/src/app/components/store-check/store-check.component.html
+++ b/src/app/components/store-check/store-check.component.html
@@ -5,7 +5,7 @@
     <div class="item resolve-fb fadeIn second" [routerLink]="['/chooseObject/resolveFeedbacks']">
         Resolve Feedbacks
     </div>
-    <div class="item2 resolve-fb fadeIn third" [routerLink]="['/login']">
+    <div class="item2 resolve-fb fadeIn third" (click)="logout()">
         Log out
     </div>
 </div>
