--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -147,7 +147,6 @@ td {
     border-radius: 20px;
     border: 2px solid #39ace7;
     background-color: #39ace7;
-    ;
     color: #fff;
     width: 200px;
     padding: 10px 0;
@@ -274,3 +273,33 @@ td {
     -moz-animation-delay: 1s;
     animation-delay: 1s;
 }
+
+
+
+.item2{
+    background-color: white;
+    color: #39ace7;
+    width: 140px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 20px;
+    border: 2px solid #39ace7;
+    cursor: pointer;
+    margin: 0 auto;
+    position: relative;
+    bottom: 0;
+    margin-bottom: 10%;
+    margin-top: 20%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  
+  .item2:hover {
+    background-color: #39ace7;
+    color: #fff;
+    transition: 0.3s;
+  }
+  
