Dodat assortmentmodule u objekat dialog

--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -110,6 +110,8 @@
   </mat-form-field>
 </div>
 
+
+
 <div class="form">
   <mat-form-field>
     <input matInput placeholder = "RequisitionDays" [(ngModel)]="data.requisitionDays" name = "requisitionDays" [disabled]="flag==3 || flag==4" required/>
@@ -175,6 +177,11 @@
   </mat-form-field>
 </div>
 
+<div class="form">
+  <mat-form-field>
+    <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule"  required/>
+  </mat-form-field>
+</div>
 </div>
 
 
