--- a/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
+++ b/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
@@ -150,6 +150,12 @@
     </mat-form-field>
   </div>
 
+  <div class="form">
+    <mat-form-field>
+      <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule"  required/>
+    </mat-form-field>
+  </div>
+
 <div mat-dialog-actions>
   <button mat-button class="item2" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Add</button>
   <button mat-button class="item2" (click)="close()">Close</button>
