--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -78,10 +78,12 @@ td {
     width: 100%;
     background-color: #fff;
     text-align: center;
+    margin-left: -5px;
 }
 
 .main h3 {
-    margin: 50px 0 25px 0;
+    margin-top: 25px;
+    margin-bottom: 25px;
     color: grey;
 }
 
