--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -279,14 +279,14 @@ td {
 
 
 .item2{
-    background-color: white;
-    color: #39ace7;
+    background-color: #39ace7;
+    color: white;
     width: 140px;
     height: 50px;
     line-height: 50px;
     text-align: center;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 15px;
     border: 2px solid #39ace7;
     cursor: pointer;
     margin: 0 auto;
@@ -300,8 +300,8 @@ td {
   }
   
   .item2:hover {
-    background-color: #39ace7;
-    color: #fff;
+    background-color: white;
+    color: #39ace7;
     transition: 0.3s;
   }
   
