--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -68,10 +68,10 @@
             (showFinishButton)="enableFinishButton($event)"></app-position>
         <div class="margintop">
 
-            <button class="btn-finish" *ngIf="showFinishButton && !resolveFeedbacks" (click)="addToStoreCheck()">ADD TO
+            <button class="item2" *ngIf="showFinishButton && !resolveFeedbacks" (click)="addToStoreCheck()">ADD TO
                 STORECHECK</button>
 
-            <button class="btn-finish" (click)="exit()">EXIT</button>
+            <button class="item2" (click)="exit()">EXIT</button>
         </div>
     </div>
 
