--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
                aria-describedby="lastNameHelp" placeholder="Enter your password">
           
 
-              <button class="fadeIn fourth" (click)="LoginUser()" [routerLink]="['/storeCheck']">Log in</button>
+              <button class="fadeIn fourth" (click)="LoginUser()">Log in</button>
 
               <div id="formFooter">
                
