--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -38,7 +38,7 @@
       <button mat-icon-button color="primary" *ngIf="data.img=='' || data.img=='NULL' " (click)="openInfo()">
         <mat-icon> warning </mat-icon>
       </button>
-      <button mat-button *ngIf="resolveFeedbacks" type="submit" [mat-dialog-close]="1" (click)="submitForm()"
+      <button mat-button *ngIf="resolveFeedbacks" type="submit" (click)="submitForm()"
         [disabled]="!imageUploaded">Resolve</button>
 
       <button mat-button class="item2" (click)="close()">Close</button>
