dugmici exit i add to store check

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -20,7 +20,7 @@
                 </tr>
             </table>
             <app-object [workModel]="workModel" [isAdmin]="false"></app-object>
-            <button class="btn-finish" (click)="openDialog()" *ngIf="!resolveFeedbacks && storeCheck">FINISH STORE
+            <button class="item2" (click)="openDialog()" *ngIf="!resolveFeedbacks && storeCheck">FINISH STORE
                 CHECK</button>
         </div>
 
