--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -279,8 +279,8 @@ td {
 
 
 .item2{
-    background-color: #39ace7;
-    color: white;
+    background-color: #fff;
+    color: #39ace7;
     width: 140px;
     height: 50px;
     line-height: 50px;
@@ -300,8 +300,8 @@ td {
   }
   
   .item2:hover {
-    background-color: white;
-    color: #39ace7;
+    background-color: #39ace7;
+    color: #fff;
     transition: 0.3s;
   }
   
