--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -2,43 +2,43 @@
 html {
     background-color: #56baed;
   }
-  
+
   body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
   }
-  
+
   a {
     color: #92badd;
     display:inline-block;
     text-decoration: none;
     font-weight: 400;
   }
-  
+
   h2 {
     text-align: center;
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase;
     display:inline-block;
-    margin: 40px 8px 10px 8px; 
+    margin: 40px 8px 10px 8px;
     color: #cccccc;
   }
-  
-  
-  
+
+
+
   /* STRUCTURE */
-  
+
   .wrapper {
     display: flex;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     min-height: 100%;
     padding: 20px;
   }
-  
+
   #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
@@ -52,7 +52,7 @@ html {
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
   }
-  
+
   #formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
@@ -61,21 +61,21 @@ html {
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
   }
-  
-  
-  
+
+
+
   /* TABS */
-  
+
   h2.inactive {
     color: #cccccc;
   }
-  
+
   h2.active {
     color: #0d0d0d;
     border-bottom: 2px solid #5fbae9;
   }
-  
-  
+
+
   button{
     background-color: #56baed;
     border: none;
@@ -98,7 +98,7 @@ html {
     transition: all 0.3s ease-in-out;
     cursor: pointer;
   }
-  
+
   button:hover{
     background-color: white;
     color: #56baed;
@@ -113,7 +113,7 @@ html {
     transform: scale(0.95);
   }
   /* FORM TYPOGRAPHY*/
-  
+
   input[type=text] {
     background-color: #f6f6f6;
     border: none;
@@ -134,20 +134,41 @@ html {
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
   }
-  
+
+  input[type=password] {
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+  }
+
   input[type=text]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
   }
-  
+
   input[type=text]:placeholder {
     color: #cccccc;
   }
-  
-  
-  
+
+
+
   /* ANIMATIONS */
-  
+
   /* Simple CSS3 Fade-in-down Animation */
   .fadeInDown {
     font-family:sans-serif;
@@ -158,7 +179,7 @@ html {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
   }
-  
+
   @-webkit-keyframes fadeInDown {
     0% {
       opacity: 0;
@@ -171,7 +192,7 @@ html {
       transform: none;
     }
   }
-  
+
   @keyframes fadeInDown {
     0% {
       opacity: 0;
@@ -184,51 +205,51 @@ html {
       transform: none;
     }
   }
-  
+
   /* Simple CSS3 Fade-in Animation */
   @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
   @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
   @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  
+
   .fadeIn {
     opacity:0;
     -webkit-animation:fadeIn ease-in 1;
     -moz-animation:fadeIn ease-in 1;
     animation:fadeIn ease-in 1;
-  
+
     -webkit-animation-fill-mode:forwards;
     -moz-animation-fill-mode:forwards;
     animation-fill-mode:forwards;
-  
+
     -webkit-animation-duration:1s;
     -moz-animation-duration:1s;
     animation-duration:1s;
   }
-  
+
   .fadeIn.first {
     -webkit-animation-delay: 0.4s;
     -moz-animation-delay: 0.4s;
     animation-delay: 0.4s;
   }
-  
+
   .fadeIn.second {
     -webkit-animation-delay: 0.6s;
     -moz-animation-delay: 0.6s;
     animation-delay: 0.6s;
   }
-  
+
   .fadeIn.third {
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
   }
-  
+
   .fadeIn.fourth {
     -webkit-animation-delay: 1s;
     -moz-animation-delay: 1s;
     animation-delay: 1s;
   }
-  
+
   /* Simple CSS3 Fade-in Animation */
   .underlineHover:after {
     display: block;
@@ -240,23 +261,23 @@ html {
     content: "";
     transition: width 0.2s;
   }
-  
+
   .underlineHover:hover {
     color: #0d0d0d;
   }
-  
+
   .underlineHover:hover:after{
     width: 100%;
   }
-  
-  
-  
+
+
+
   /* OTHERS */
-  
+
   *:focus {
       outline: none;
-  } 
-  
+  }
+
   #icon {
     width:60%;
   }
