--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,31 +5,31 @@
 <div class="wrapper fadeInDown">
 
     <div id="formContent">
-  
+
 
         <div class="fadeIn first">
             <img src="../../../assets/StoreCheckIcon3.png" id="icon" alt="App Icon" />
           </div>
 
           <form>
-           
+
 
               <input [(ngModel)]="user.username" type="text" name="username" class="fadeIn second" id="username"
                aria-describedby="nameHelp" placeholder="Enter your username">
-             
-  
-              <input [(ngModel)]="user.password" type="text" name="password" class="fadeIn third" id="password"
+
+
+              <input [(ngModel)]="user.password" type="password" name="password" class="fadeIn third" id="password"
                aria-describedby="lastNameHelp" placeholder="Enter your password">
-          
+
 
               <button class="fadeIn fourth" (click)="LoginUser()" [routerLink]="['/storeCheck']">Log in</button>
 
               <div id="formFooter">
-               
+
               </div>
 
-          
+
           </form>
-    
+
     </div>
 </div>
