--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -6,13 +6,14 @@
     text-align: center;
 }
 
-.margintop{
+.margintop {
     margin-top: 10%;
 }
 
-button{
+button {
     font-family: sans-serif;
 }
+
 .header .head {
     display: flex;
     width: 400px;
@@ -52,7 +53,7 @@ button{
 
 .object-info-tables table {
     table-layout: fixed;
-     max-width: 100%;
+    max-width: 100%;
 }
 
 .header table,
@@ -167,8 +168,8 @@ td {
 }
 
 
-  .fadeInDown {
-    font-family:sans-serif;
+.fadeInDown {
+    font-family: sans-serif;
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
@@ -276,32 +277,22 @@ td {
     animation-delay: 1s;
 }
 
-
-
-.item2{
+.item2 {
+    border-radius: 10px;
+    border: 2px solid #39ace7;
     background-color: #fff;
     color: #39ace7;
-    width: 140px;
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    border-radius: 10px;
-    font-size: 15px;
-    border: 2px solid #39ace7;
+    width: 200px;
+    padding: 10px 0;
+    margin: 30px;
     cursor: pointer;
-    margin: 0 auto;
-    position: relative;
-    bottom: 0;
-    margin-bottom: 10%;
-    margin-top: 20%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-  }
-  
-  .item2:hover {
-    background-color: #39ace7;
-    color: #fff;
+    width: 145px;
+    height: 50px;
+    font-size: 15px;
+}
+
+.item2:hover {
+    background-color: #fff;
+    color: #39ace7;
     transition: 0.3s;
-  }
-  
+}
