poruka o neuspesnom loginu v1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+
+<div *ngIf="loading"
+style="display: flex; justify-content: center; align-items: center; background: white;">
+<mat-progress-spinner
+class="mat-spinner-color"
+ mode="indeterminate">
+</mat-progress-spinner>
+</div>
