--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -1,37 +1,41 @@
 <div class="container">
-    <h3 mat-dialog-title *ngIf="flag == 1">Feedback</h3>
+  <h3 mat-dialog-title *ngIf="flag == 1">Feedback</h3>
 
-    <form class="mat-dialog-content" #formControl="ngForm">
+  <form class="mat-dialog-content" #formControl="ngForm">
 
-        <div class="form">
-            <mat-form-field>
-              <mat-select [(ngModel)]="feedback.feedbackCategoryName" placeholder="Feedback Category" name="feetbackCategory" required>
-                <mat-option *ngFor="let category of feedbackCategories" [value]="category.feedbackCategoryName">
-                  {{ category.feedbackCategoryName }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+    <div class="form">
+      <mat-form-field>
+        <mat-select [(ngModel)]="feedback.feedbackCategoryName" placeholder="Feedback Category" name="feetbackCategory"
+          required>
+          <mat-option *ngFor="let category of feedbackCategories" [value]="category.feedbackCategoryName">
+            {{ category.feedbackCategoryName }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
 
-        <div class="form">
-            <mat-form-field>
-                <input matInput [(ngModel)]="feedback.text" name="text" placeholder="Type text..." required/>
-            </mat-form-field>
-        </div>
+    <div class="form">
+      <mat-form-field>
+        <input matInput [(ngModel)]="feedback.text" name="text" placeholder="Type text..." required />
+      </mat-form-field>
+    </div>
 
 
-        <form [formGroup]="form" (ngSubmit)="submitForm()">
-            <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file" required hidden>
-            <label>Take photo:</label>
-            <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%"/></label>
-        </form>
-        <div *ngIf="imageUploaded">
-          <p>Image is uploaded</p>
-        </div>
-        <div mat-dialog-actions class="wrap">
-            <button mat-button class="test" type="submit" (click)="submitForm()" [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Add</a></span></button>
-
-            <button mat-button class="test" (click)="close()">Close</button>
-           </div>
+    <form [formGroup]="form" (ngSubmit)="submitForm()">
+      <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera"
+        fromControlName="file" required hidden>
+      <label>Take photo:</label>
+      <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" /></label>
     </form>
+    <div *ngIf="imageUploaded">
+      <p>Image is uploaded</p>
+    </div>
+    <div mat-dialog-actions class="wrap">
+      <button mat-button class="test" type="submit" (click)="submitForm()"
+        [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a
+            onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Add</a></span></button>
+
+      <button mat-button class="test" (click)="close()">Close</button>
+    </div>
+  </form>
 </div>
