--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -17,13 +17,10 @@
           </div>
         </div>
 
-        <div class="fadeIn second">
-          <a [routerLink]="['/login']">
-            <div class="item2">
-              Log out
-            </div>
-          </a>
+        <div class="fadeIn second item2"  (click)="logout()">
+           Log out
         </div>
+        
       </div>
 
     </div>
