--- a/src/app/dialogs/position-dialog/position-dialog.component.css
+++ b/src/app/dialogs/position-dialog/position-dialog.component.css
@@ -1,7 +1,9 @@
 .container {
     display: flex;
     flex-direction: column;
-    min-width: 450px;
+    /* min-width: 450px; */
+    width: 400px;
+    max-width: 100%;
 }
 
 .form {
@@ -34,4 +36,5 @@ button[disabled]:hover {
 
 .mat-dialog-content {
     overflow-y: hidden;
+    padding-bottom: 10px;
 }
