--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -106,6 +106,7 @@ table{
   hyphens: auto;
 
   text-align: left;
+  margin-left: -20px;
 }
 
 .mat-column-address {
@@ -113,6 +114,24 @@ table{
   white-space: unset !important;
   flex: 0 0 30% !important;
   width: 30% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
+  text-align: left;
+}
+
+.mat-column-actions {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 53% !important;
+  width: 53% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
 
