--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -34,9 +34,11 @@
         <mat-cell *matCellDef="let row">{{ row.email }}</mat-cell>
       </ng-container>
 
-      <ng-container matColumnDef="userType">
+      
+
+      <ng-container matColumnDef="UserType">
         <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">User type</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{ row.userType }}</mat-cell>
+        <mat-cell *matCellDef="let row">{{ row.UserType }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="actions">
