otklonjena siva pozadina u dijalogu

--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -18,11 +18,9 @@
         </div>
 
         <div class="fadeIn second">
-          <a [routerLink]="['/login']">
-            <div class="item2">
-              Log out
-            </div>
-          </a>
+          <div class="item2" (click)="logout()">
+            Log out
+          </div>
         </div>
       </div>
 
