--- a/src/app/dialogs/are-you-sure-dialog/are-you-sure-dialog.component.css
+++ b/src/app/dialogs/are-you-sure-dialog/are-you-sure-dialog.component.css
@@ -28,3 +28,11 @@ button:hover {
 .mat-dialog-content {
     overflow-y: hidden;
 }
+
+/* Otklanja sivu pozadinu sa dugmeta */
+button {
+    outline: none;
+}
+::ng-deep .mat-button-focus-overlay {
+    display: none;
+}
