--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -36,9 +36,9 @@
 
       
 
-      <ng-container matColumnDef="UserType">
+      <ng-container matColumnDef="userType">
         <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext">User type</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{ row.UserType }}</mat-cell>
+        <mat-cell *matCellDef="let row">{{ row.userType }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="actions">
