--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<router-outlet></router-outlet>
+
+<div *ngIf="!loading">
+  <router-outlet></router-outlet>
+</div>
 
 <div *ngIf="loading"
 style="display: flex; justify-content: center; align-items: center; background: white;">
