--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div *ngIf="loading"
-style="display: flex; justify-content: center; align-items: center; background: white;">
+style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
 <mat-progress-spinner
 class="mat-spinner-color"
  mode="indeterminate">
